--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,9 +61,8 @@
     }
     div#root {
         overflow: hidden;
-        min-height: 100vh;
+        height: 100vh;
         width: 100%;
-        height: 100%;
     }
 }
 
